After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677068 - Rendering an svg file incorrectly
Rendering an svg file incorrectly
Status: RESOLVED FIXED
Product: librsvg
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: librsvg maintainers
librsvg maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-30 01:21 UTC by David Turner
Modified: 2015-11-03 21:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Left: eog incorrectly rendering the svg; Right: Firefox 12 correctly rendering the svg (33.79 KB, image/jpeg)
2012-05-30 01:21 UTC, David Turner
  Details
The svg which is not redering properly (7.52 KB, image/svg+xml)
2012-05-30 14:53 UTC, David Turner
  Details
Set correct reflextion points for path h, v and a (1.76 KB, patch)
2013-12-21 15:39 UTC, pitdicker
none Details | Review

Description David Turner 2012-05-30 01:21:25 UTC
Created attachment 215229 [details]
Left: eog incorrectly rendering the svg; Right: Firefox 12 correctly rendering the svg

This problem seems to affect all software which is using librsvg, but not others, so I figure it is a bug.  In the libgweather package, there is an image, weather-clear-night-090.svg (and weather-clear-night-270.svg), and it does not render as expected.  I have attached a screenshot of the correct and incorrect renderings, using different software.

I have also opened the file in inkscape, and it rendered properly as well.
Comment 1 Emmanuel Pacaud 2012-05-30 06:42:43 UTC
Thanks for the bug report.

Could you attach the original svg file, please ?
Comment 2 David Turner 2012-05-30 14:53:37 UTC
Created attachment 215245 [details]
The svg which is not redering properly
Comment 3 Emmanuel Pacaud 2012-05-30 15:00:23 UTC
Confirmed with librsvg master.
Comment 4 pitdicker 2013-12-21 15:39:04 UTC
Created attachment 264691 [details] [review]
Set correct reflextion points for path h, v and a

The problematic part of this svg is a path where 's' follows a 'v' (shorthand curve after vertical line). Because the previous segment is not a bezier curve, the first reflexion point should be the last point of the vertical line.
This last point is not always correctly set as reflexion point for a vertical line, horizontal line or arc.
Comment 5 Federico Mena Quintero 2015-11-03 21:35:20 UTC
Thanks for the patch - I missed this case when refactoring that code.  This is now fixed in commit 34dcd26396a75405bd691f54a00d689fb6f755d8 - it should appear in librsvg 2.40.12.