rsvg-path: Add missing case where reflection point was not set

This is from https://bugzilla.gnome.org/show_bug.cgi?id=677068, although I haven't figured
out why the rightmost/topmost arrow in https://bugzilla.gnome.org/show_bug.cgi?id=685906 doesn't
render yet.